<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_fix">Title</string>
    <string name="username_fix">Username</string>
    <string name="password_fix">Password</string>
    <string name="login_fix">LOGIN</string>
    <string name="change_my_password_fix">change my password</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="welcome_to_your_homepage_fix">Welcome to your homepage!</string>
    <string name="change_your_homepage_background_fix">Change your homepage background</string>
    <string name="change_my_homepage_background_fix">Change my homepage background</string>
    <string name="press_fix">"PRess\n        "</string>
    <string name="title_activity_next_next">NextNextActivity</string>
    <string name="gray_fix">gray</string>
    <string name="bright_fix">bright</string>
    <string name="dark_fix">dark</string>
    <string name="ceva_fix">ceva</string>
    <string name="change_picture_fix">change picture</string>
    <string name="change_password_fix">Change Password</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="old_password_fix">Old Password</string>
    <string name="new_password_fix">New Password</string>
    <string name="confirm_password_fix">Confirm Password</string>

</resources>
