<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/new_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/old_passwd"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_passwd"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/new_passwd"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_passwd"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="55dp"
        android:text="@string/change_password_fix" />

    <EditText
        android:id="@+id/old_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/change_password_button"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/old_passwd"
        android:layout_alignBottom="@+id/old_passwd"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="text"
        android:text="@string/old_password_fix" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/new_passwd"
        android:layout_alignBottom="@+id/new_passwd"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="text"
        android:text="@string/new_password_fix" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirm_passwd"
        android:layout_alignBottom="@+id/confirm_passwd"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="text"
        android:text="@string/confirm_password_fix" />

</RelativeLayout>